@@ -1,5 +1,15 @@
 package com.userPointService.processor;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.common.configurations.encrypt.EncryptDecryptConverter;
 import com.common.configurations.structure.NotificationComponent;
 import com.common.data.user.UserPoint;
@@ -10,20 +20,12 @@ import com.common.dto.user.UserPointDTO;
 import com.common.dto.user.UserPointWithChildDTO;
 import com.common.mapper.UserPointMapper;
 import com.common.mapper.UserPointToPointMapper;
-import com.userPointService.service.UserPointAccessService;
 import com.common.structure.exception.NotFoundException;
 import com.common.structure.status.ActivityHttpStatus;
+import com.userPointService.service.UserPointAccessService;
 import com.userPointService.service.UserPointService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Mono;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import reactor.core.publisher.Mono;
 
 @Component
 public class UserPointProcessor {
@@ -102,27 +104,47 @@ public class UserPointProcessor {
     }
 
     private ResponseDTO registerInternal(UserPointDTO userPointDTO) {
-            UserPoint userPointSave = userPointMapper.fromDTO(userPointDTO);
-            List<UserPoint> userChild = userPointSave.getPointFigli().stream().map(userPointToPointMapper::toChange)
-                    .toList();
-            userPointSave.setType(1);
-            userPointSave.setStatus(1);
-            userChild = userChild.stream().map(x -> {
-                String tempPassword = UUID.randomUUID().toString().substring(0, 8);
-                x.setPassword(encryptDecryptConverter.convert(tempPassword));
-                x.setPoints(100);
-                x.setType(0);
-                x.setStatus(1);
-                return x;
-            }).collect(Collectors.toList());
+        UserPoint userPointSave = userPointMapper.fromDTO(userPointDTO);
+        List<UserPoint> userChild = userPointSave.getPointFigli().stream().map(userPointToPointMapper::toChange)
+                .toList();
+        userPointSave.setType(1);
+        userPointSave.setStatus(1);
+        userChild = userChild.stream().map(x -> {
+            String tempPassword = UUID.randomUUID().toString().substring(0, 8);
+            x.setPassword(encryptDecryptConverter.convert(tempPassword));
+            x.setPoints(100);
+            x.setType(0);
+            x.setStatus(1);
+            return x;
+        }).collect(Collectors.toList());
 
-            if (userPointSave.getEmail() != null && !userChild.isEmpty()) {
-                userPointSave = userPointService.saveUser(userPointSave, userChild);
+        if (userPointSave.getEmail() != null && !userChild.isEmpty()) {
+            userPointSave = userPointService.saveUser(userPointSave, userChild);
+            UserPointDTO dto = userPointMapper.toDTO(userPointSave);
+            inviaNotifica(dto, userChild);
+        }
+        return new ResponseDTO(new UserDTO(null, true, userPointDTO.getEmailUserCurrent()),
+                ActivityHttpStatus.OK.value(), new ArrayList<>());
+    }
+
+    @Transactional
+    public Mono<ResponseDTO> resetPassword(UserPointDTO userPointDTO) {
+        return Mono.fromCallable(() -> resetPasswordInternal(userPointDTO));
+    }
+
+    private ResponseDTO resetPasswordInternal(UserPointDTO userPointDTO) {
+        UserPoint userPointSave = userPointMapper.fromDTO(userPointDTO);
+        String tempPassword = UUID.randomUUID().toString().substring(0, 8);
+        if (userPointSave.getEmail() != null) {
+            userPointSave = userPointService.getUserByEmail(userPointSave);
+            if (userPointSave != null) {
                 UserPointDTO dto = userPointMapper.toDTO(userPointSave);
-                inviaNotifica(dto, userChild);
+                dto.setPassword(encryptDecryptConverter.convert(tempPassword));
+                inviaNotifica(dto, null);
             }
-            return new ResponseDTO(new UserDTO(null, true, userPointDTO.getEmailUserCurrent()),
-                    ActivityHttpStatus.OK.value(), new ArrayList<>());
+        }
+        return new ResponseDTO(new UserDTO(null, true, userPointDTO.getEmailUserCurrent()),
+                ActivityHttpStatus.OK.value(), new ArrayList<>());
     }
 
     @Transactional
@@ -166,7 +188,8 @@ public class UserPointProcessor {
     }
 
     private void inviaNotifica(UserPointDTO userPointDTO, List<UserPoint> userChild) {
-        List<UserPointDTO> userChildDTO = userChild.stream().map(userPointMapper::toDTO).collect(Collectors.toList());
+        List<UserPointDTO> userChildDTO = userChild == null ? null
+                : userChild.stream().map(userPointMapper::toDTO).collect(Collectors.toList());
         UserPointWithChildDTO dto = new UserPointWithChildDTO(userPointDTO, userChildDTO);
         notificationComponent.inviaNotifica(dto, notificationExchange, routingKeyEmail);
     }
